[package]
name = "framework"
version = "0.1.0"
edition = "2021"

[dependencies]
mio = { version = "1.0.3", features = ["net", "os-poll"] }
async-lock = { version = "3.0.0" }
bitflags = { version = "2.8.0" }
crossbeam = { version = "0.8.4" }
serde = { version = "1.0", features = ["derive"] }
bytes = { version = "1" }
tokio-util = { version = "0.7", features = ["codec"] }
libc = { version = "0.2.96", default-features = false }
dashmap = { version = "6.1.0" }
tracing = { version = "0.1" }
concurrent-queue = { version = "2.2.0" }
rustc-hash = { version = "2.0" }
rust-crypto = { version = "0.2" }
rand = { version = "0.9" }
